themes/editorial/sass/custom.scss
/*
    Place custom styles here.
*/

ul.tabs{
    height: 3rem;
    display: table-cell;
    padding: 0;
}
ul.tabs li{
    cursor: pointer;
    display: block;
    padding: 0 1.5rem;
    line-height: 3rem;
    float: left;
    transition: all 0.18s;
    background-color: _palette(fg-white);
    font-weight: bold;
    &:hover {
	    color: _palette(accent);
    }
}

ul.tabs li.current{
    box-shadow: inset 0 -5px 0 _palette(accent);
    color: _palette(accent);
    &:hover {
	    //color: black !important;
    }
}

.tab-content{
    display: none;
}

.tab-content.current{
    display: inherit;
}


/* plan */
table.plan tr {
    border: none;
}
table.plan td {
    padding: 0.25em 0.75em;
}
.plan--lichyDen {
    background-color: _palette(fg-white) !important;
}
.plan--sudyDen {
    background-color: inherit !important;
}

/****************
***** HOME ******
****************/
/* home - news */
.newsPictures {
    margin: 1em 0;
}
/* home - soon */
#soon {
    padding: 0 1.5rem;
    background-color: _palette(accent);
    height: 100%;
    position: relative;
}

.soon--date {
    padding-top: 1.5rem;
}

#soon section {
    background-color: #FAFAFA;
    padding: 1.5rem;
    border-radius: 7px;
    margin: 1.3rem;
    position: relative;
    left: 1rem;
}
#soon section > article > ul {
    margin: 0;
}

.soon--date-now {
    padding-top: 1.5rem;
}
#soon a, #soon a:hover {
    text-decoration: none;
    color: _palette(bg-alt) !important;
}

.soon--dot {
    height: 15px;
    width: 15px;
    background-color: _palette(accent);
    border-radius: 50%;
    display: inline-block;
    top: 3px;
    position: relative;
    border: solid;
  }
.soon--dot-now{
    background-color: _palette(bg-alt);
}
#soon--timeline {
    border: 2px _palette(bg-alt) solid;
    width: 0;
    height: calc(100% - 40px);
    float: left;
    left: 30px;
    margin-top: 40px;
    position: absolute;
}

/****************
*** Calendar ****
****************/
table.calendar tr {
    background-color: inherit !important;
}

/****************
**** Program ****
****************/
#program tr {
    border: none;
}
#filter_program {
    border: _palette(bg-alt) dotted 3px;
}
#filter_program label.pure-radio {
    margin: 2px;
}
#filter_program fieldset {
    margin: 2.2em 1.1em;
}
tr.program--now {
    border: solid _palette(bg-alt) !important;
    border-width: 0.5em 0em !important;
    td {
        padding: 0;
    }
}


/* common */
.click-row {
    cursor: pointer;
    &:hover {
        background-color: _palette(accent);
    }
}





// NAV-LINKS

#nav-links {
    position: relative;
    width: calc(100% - 20em);
    float: right;
		
	> ul {
		float: right;
        list-style: none;
		margin: 0;
		padding: 0;
		z-index: 5;
	}
	
	> ul > li {
		background: none;
        float: left;
        position: relative;
        padding: 0;
		
		&.hide {
			display: none;
		}
		
		&:hover {
            color: _palette(accent);
			
			ul {
				display: block;
			}
		}
    }
    i {
        padding: 20px;
        font-size: 18px;
        position: relative;
        top: -2px;
    }
	
	a {
		color: _palette(fg);
        text-decoration: none;
        font-family: Overpass;
        border-bottom: none;
        font-size: 18px;
        padding: 20px;
	}
	
	ul ul {
		background: _palette(fg-white);
		display: none;
        list-style: none;
		padding: 0;
		position: fixed;
        right: 0;
        top: 56px;
		
		a {
          margin-bottom: 15px;
		  padding: 0 15px;
		  white-space: nowrap;
		}
	}	
}

#program .backgroundAccent{
    background-color: _palette(accent);
}
#program td.edit{
    padding: 0;
    a {
        border-bottom: none;
        display: block;
        padding: 0.75em 0.75em;
    }
    &:hover {
        background-color: _palette(accent);
        a {
            color: _palette(fg) !important;
        }
        
    }
}

